# irap_rmrc_docker

./: README.md
irap_docker/: Dockerfile  docker-compose.yml  docker_build.sh  docker_removal.sh  entrypoint.sh  patch_serial.sh  readme.md  set_wifi_and_remove_getty.sh
irap_docker/data/irap_ws/src/: arduino_bridge.py  fromLow.py  test.py  test_arduino.py  test_final.py  test_msgpack.py
irap_docker/data/irap_ws/src/irap_recam/: CMakeLists.txt  package.xml
irap_docker/data/irap_ws/src/irap_recam/launch/: irap_recam_launch.py
irap_docker/data/irap_ws/src/irap_recam/prebuilt/: irap_recam
irap_docker/data/irap_ws/src/irap_router_node/: package.xml  setup.cfg  setup.py
irap_docker/espcam_firmware/: cmd.txt
